--- a/pages/code/asdocs/all-classes.html
+++ b/pages/code/asdocs/all-classes.html
@@ -46,6 +46,18 @@
 <td><a href="com/whirled/AvatarControl.html">AvatarControl</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/avrg/AVRGameAvatar.html">AVRGameAvatar</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/AVRGameControl.html">AVRGameControl</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/AVRGameControlEvent.html">AVRGameControlEvent</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/AVRServerGameControl.html">AVRServerGameControl</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/BackdropControl.html">BackdropControl</a></td>
 </tr>
 <tr>
@@ -68,6 +80,9 @@
 </tr>
 <tr>
 <td><a href="com/threerings/flash/ClearingTextField.html">ClearingTextField</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/ClientSubControl.html">ClientSubControl</a></td>
 </tr>
 <tr>
 <td><a href="com/threerings/util/Cloneable.html"><i>Cloneable</i></a></td>
@@ -220,6 +235,9 @@
 <td><a href="com/threerings/util/MethodQueue.html">MethodQueue</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/avrg/MobControl.html">MobControl</a></td>
+</tr>
+<tr>
 <td><a href="com/threerings/util/MultiLoader.html">MultiLoader</a></td>
 </tr>
 <tr>
@@ -250,7 +268,13 @@
 <td><a href="com/whirled/game/PlayerSubControl.html">PlayerSubControl</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/avrg/PropControl.html">PropControl</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/game/PropertyChangedEvent.html">PropertyChangedEvent</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/QuestSubControl.html">QuestSubControl</a></td>
 </tr>
 <tr>
 <td><a href="com/threerings/util/Random.html">Random</a></td>
@@ -266,6 +290,9 @@
 </tr>
 <tr>
 <td><a href="com/threerings/util/RingBuffer.html">RingBuffer</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/RoomSubControl.html">RoomSubControl</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/game/SeatingSubControl.html">SeatingSubControl</a></td>
@@ -299,6 +326,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/game/StateChangedEvent.html">StateChangedEvent</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/avrg/StateSubControl.html">StateSubControl</a></td>
 </tr>
 <tr>
 <td><a href="com/threerings/util/StreamableArrayList.html">StreamableArrayList</a></td>
