--- a/pages/code/asdocs/all-index-O.html
+++ b/pages/code/asdocs/all-index-O.html
@@ -109,11 +109,23 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("OÂ
      </td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/QuestSubControl.html#offerQuest()">offerQuest</a>(questId, intro, initialStatus) &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/QuestSubControl.html">QuestSubControl</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/PropertyChangedEvent.html#oldValue">oldValue</a> &mdash; Property in class com.whirled.game.<a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/PropertyChangedEvent.html">PropertyChangedEvent</a></td>
 </tr>
 <tr>
 <td width="20"></td><td>
      Get the property's previous value (handy!).</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/AVRGameAvatar.html#orientation">orientation</a> &mdash; Property in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/AVRGameAvatar.html">AVRGameAvatar</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> The avatar's orientation.</td>
 </tr>
 <tr>
 <td style="padding-bottom:20px" colspan="2"></td>
