--- a/pages/code/asdocs/com/whirled/FurniControl.html
+++ b/pages/code/asdocs/com/whirled/FurniControl.html
@@ -41,7 +41,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="classHeaderTableLabel">Inheritance</td><td class="inheritanceList">FurniControl <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../images/inherit-arrow.gif"> <a href="EntityControl.html">EntityControl</a> <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../images/inherit-arrow.gif"> <a href="AbstractControl.html">AbstractControl</a> <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../images/inherit-arrow.gif"> flash.events.EventDispatcher</td>
 </tr>
 <tr>
-<td class="classHeaderTableLabel">Subclasses</td><td><a href="../whirled/BackdropControl.html">BackdropControl</a>, <a href="../whirled/ToyControl.html">ToyControl</a></td>
+<td class="classHeaderTableLabel">Subclasses</td><td><a href="../whirled/BackdropControl.html">BackdropControl</a>, <a href="avrg/PropControl.html">PropControl</a>, <a href="../whirled/ToyControl.html">ToyControl</a></td>
 </tr>
 </table>
 <p></p>
