--- a/pages/code/asdocs/package-list.html
+++ b/pages/code/asdocs/package-list.html
@@ -29,6 +29,11 @@
 </td>
 </tr>
 <tr>
+<td><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/package-detail.html">com.whirled.avrg</a>
+<br>
+</td>
+</tr>
+<tr>
 <td><a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/package-detail.html">com.whirled.game</a></td>
 </tr>
 </table>
