--- a/src/gwt/public/admin/index.html
+++ b/src/gwt/public/admin/index.html
@@ -3,6 +3,6 @@
 <head><title>Admin</title></head>
 <body style="background: #FFFFFF">
   <iframe id="__gwt_historyFrame" style="width:0px;height:0px;border:0px;display:none"></iframe>
-  <script language="javascript" src="admin.nocache.js"></script>
+  <script language="javascript" src="adminz.nocache.js"></script>
 </body>
 </html>
